# glitchmao

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
apps/web-nuxt/: drizzle.config.ts  i18n.config.ts  nuxt.config.ts  package-lock.json  package.json  uno.config.ts
apps/web-nuxt/app/assets/: main.css
apps/web-nuxt/app/composables/: useTheme.ts
apps/web-nuxt/app/layouts/: default.vue
apps/web-nuxt/app/middleware/: onboarding.global.ts
apps/web-nuxt/app/pages/: index.vue  login.vue  onboarding.vue  profile.vue  reset-password.vue  settings.vue  verify.vue
apps/web-nuxt/scripts/: run-migrations.mjs  watch-sql-migrations.mjs
apps/web-nuxt/server/api/: profile.get.ts  profile.post.ts  profile.put.ts  (+5 more)
apps/web-nuxt/tests/: pagination.test.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: bundle.rs  hasher.rs  lib.rs  signer.rs
crates/signer-service/: Cargo.toml
crates/signer-service/src/: main.rs
doc/: README.md  api.md  cli.md  configuration.md  index.md  self-hosting.md
doc/.vitepress/: config.mts
infra/db/migrations/: 0001_init.sql  0002_signatures_profiles.sql  0003_onboarding_gpg_keys.sql  0004_signatures_public_id.sql  0005_auth_sessions.sql  0006_password_reset.sql  0007_profile_locale.sql
infra/docker/: Dockerfile.dev  Dockerfile.prod
(+53 files in other folders)
